# MLTrading

./: .env.example  .gitignore  .pre-commit-config.yaml  =11.0  =5.9.0  CHART_CONTROLS_UPGRADE.md  Procfile  README.md  archive_test_report_2025-08-16.md  build_docs.py  check_adbe_data_current.py  clean_logs_example.py  debug_data_query.sql  debug_database_dates.py  env.example  environment.yml  fix_comprehensive_dashboard.py  fix_critical_dashboard_issues.py  fix_dashboard_issues.py  fix_mixed_year_data.sql  fix_undefined_vars.py  fix_unused_imports.py  fix_year_data.py  investigate_date_conversion.py  mkdocs.yml  pyproject.toml  pytest.ini  quick_log_cleanup.py  refactored_data_function.py  regression_test_report.md  requirements-optional.txt  requirements.txt  run.py  run_fast_tests.py  run_regression_tests.py  run_tests.py  run_ui.py  simple_log_cleanup.py  temp_prefect_comprehensive_AGYS_1756342683.py  test_aten_ingm_pairs.py  (+4 more)
config/: alpaca_config.yaml  config.yaml  deployments_config.yaml  prefect_config.yaml  strategies_config.yaml  symbols.txt
deployment/: __init__.py  pytest.ini
deployments/: combined_flow.py  comprehensive_feature_engineering_deployment.py  feature_engineering_flow.py  feature_engineering_production_deployment.py  prefect.yaml  yahoo_flow.py  yahoo_initial_backfill_deployment.py  yahoo_market_hours_deployment.py  yahoo_ondemand_deployment.py  yahoo_ondemand_sequential_deployment.py  yahoo_production_deployment.py  yahoo_sequential_deployment.py
docs/: API_DOCUMENTATION.md  ARCHIVE_CLEANUP_SUMMARY.md  CHANGELOG.md  CI_CD_GUIDE.md  README.md  (+24 more)
(+218 files in other folders)
